# vector_pico

./: .gitmodules  CMakeLists.txt  README.md  advmame.c  advmame.cpp  advmame.h  advmame.ino  debug_serial.c  debug_serial.h  dma_test.ino  dma_test2.ino  drawing.c  drawing.h  drawing_hw.c  max5716.h  mcp4922.c  picoFlashTool_WinPS.ps1  settings.c  settings.h  spi_dma.h  spi_half_duplex.h  spi_half_duplex.pio  spi_pio.h  summary.md  thing.ipynb  uart_settings.c  uart_settings.h  util.h  vector-pico.c  vector_pico.ino  vectormame.c  vectormame.h
other_testing/: dma_test.ino
pio_test/: pio_test.ino
src/: advmame.c  advmame.h  debug_serial.h  drawing.c  drawing_hw.c  settings.c  settings.h  spi_half_duplex.pio  test_pattern.h  util.h  vector-pico.c
